--- a/responz-new/css/bswe.css
+++ b/responz-new/css/bswe.css
@@ -94,142 +94,144 @@ body {
     }*/
 }
 /* line 77, ../../sass/_bswe.scss */
-body p {
+body p,
+body #content li,
+body .writer_promo {
   font-size: 16px;
   line-height: 1.5em;
 }
-/* line 83, ../../sass/_bswe.scss */
+/* line 85, ../../sass/_bswe.scss */
 body #article-bottom-nl h2 {
   border-top: 1px solid #000;
   font-family: Cabin, Arial, sans-serif;
   font-style: normal;
   padding: 5px 0 0;
 }
-/* line 93, ../../sass/_bswe.scss */
+/* line 95, ../../sass/_bswe.scss */
 body #contentwrap,
 body #sidebar {
   padding-top: 0;
 }
-/* line 98, ../../sass/_bswe.scss */
+/* line 100, ../../sass/_bswe.scss */
 body #content,
 body #sidebar,
 body #sidebar-alt {
   padding-top: 10px;
 }
-/* line 104, ../../sass/_bswe.scss */
+/* line 106, ../../sass/_bswe.scss */
 body #content {
   background: #fff;
 }
-/* line 108, ../../sass/_bswe.scss */
+/* line 110, ../../sass/_bswe.scss */
 body #body > div:first-child {
   background: #e2e2e2;
 }
-/* line 111, ../../sass/_bswe.scss */
+/* line 113, ../../sass/_bswe.scss */
 body #body > div:first-child .banner-wide-box {
   margin: 0;
   max-height: 90px;
   text-align: center;
   padding: 10px;
 }
-/* line 120, ../../sass/_bswe.scss */
+/* line 122, ../../sass/_bswe.scss */
 body footer .col3-1 {
   height: 75px;
 }
-/* line 124, ../../sass/_bswe.scss */
+/* line 126, ../../sass/_bswe.scss */
 body footer .col3-1 #social-widget-3 h4 {
   text-align: right;
 }
-/* line 133, ../../sass/_bswe.scss */
+/* line 135, ../../sass/_bswe.scss */
 body #header-slider.slider img {
   border: 1px solid #ccc;
 }
-/* line 138, ../../sass/_bswe.scss */
+/* line 140, ../../sass/_bswe.scss */
 body #header-slider.slider .slide-post-title a {
   font-family: Cabin, Arial, sans-serif;
   font-size: 14px;
   font-weight: bold;
 }
-/* line 149, ../../sass/_bswe.scss */
+/* line 151, ../../sass/_bswe.scss */
 body #headerwrap {
   background: #000;
 }
-/* line 152, ../../sass/_bswe.scss */
+/* line 154, ../../sass/_bswe.scss */
 body #headerwrap #header {
   background-image: url("/wp-content/themes/responz-new/images/bswe-sax.png");
   background-repeat: no-repeat;
   height: 172px;
 }
 @media screen and (min-width: 520px) {
-  /* line 152, ../../sass/_bswe.scss */
+  /* line 154, ../../sass/_bswe.scss */
   body #headerwrap #header {
     border-bottom: none;
   }
 }
-/* line 163, ../../sass/_bswe.scss */
+/* line 165, ../../sass/_bswe.scss */
 body #headerwrap #header hgroup {
   padding-left: 66px;
 }
-/* line 168, ../../sass/_bswe.scss */
+/* line 170, ../../sass/_bswe.scss */
 body #headerwrap #header a#advertise-link {
   color: #9CCFEE;
 }
 @media screen and (max-width: 480px) {
-  /* line 173, ../../sass/_bswe.scss */
+  /* line 175, ../../sass/_bswe.scss */
   body #headerwrap #header #searchform-wrap {
     position: relative;
   }
 }
-/* line 179, ../../sass/_bswe.scss */
+/* line 181, ../../sass/_bswe.scss */
 body #headerwrap #header #site-logo,
 body #headerwrap #header #site-description {
   width: 300px;
 }
 @media screen and (max-width: 600px) {
-  /* line 179, ../../sass/_bswe.scss */
+  /* line 181, ../../sass/_bswe.scss */
   body #headerwrap #header #site-logo,
   body #headerwrap #header #site-description {
     width: 212px;
   }
 }
-/* line 189, ../../sass/_bswe.scss */
+/* line 191, ../../sass/_bswe.scss */
 body #headerwrap #header #site-logo {
   padding-top: 0;
   top: 0;
 }
-/* line 193, ../../sass/_bswe.scss */
+/* line 195, ../../sass/_bswe.scss */
 body #headerwrap #header #site-logo a {
   color: #9CCFEE;
   font-family: SkinBones, sans-serif, Arial, Helvetica;
   font-size: 44px;
   font-style: normal;
 }
-/* line 201, ../../sass/_bswe.scss */
+/* line 203, ../../sass/_bswe.scss */
 body #headerwrap #header #site-logo a span {
   display: block;
   line-height: 1em;
 }
 @media screen and (max-width: 600px) {
-  /* line 193, ../../sass/_bswe.scss */
+  /* line 195, ../../sass/_bswe.scss */
   body #headerwrap #header #site-logo a {
     font-size: 38px;
   }
 }
-/* line 212, ../../sass/_bswe.scss */
+/* line 214, ../../sass/_bswe.scss */
 body #headerwrap #header #site-description {
   color: #fff;
   top: 94px;
 }
-/* line 219, ../../sass/_bswe.scss */
+/* line 221, ../../sass/_bswe.scss */
 body #headerwrap #header .social-widget .rss a {
   color: #fff;
 }
 @media screen and (min-width: 760px) and (max-width: 850px) {
-  /* line 226, ../../sass/_bswe.scss */
+  /* line 228, ../../sass/_bswe.scss */
   body #headerwrap #header #text-13 img {
     max-width: 400px;
   }
 }
-/* line 234, ../../sass/_bswe.scss */
+/* line 236, ../../sass/_bswe.scss */
 body #headerwrap #text-16 {
   color: #fff;
   font-style: italic;
@@ -237,56 +239,56 @@ body #headerwrap #text-16 {
   max-width: 970px;
   padding: 10px 3% 0;
 }
-/* line 241, ../../sass/_bswe.scss */
+/* line 243, ../../sass/_bswe.scss */
 body #headerwrap #text-16 a {
   color: #fff;
 }
-/* line 246, ../../sass/_bswe.scss */
+/* line 248, ../../sass/_bswe.scss */
 body #headerwrap #main-nav {
   font-family: Cabin, Arial, sans-serif;
 }
-/* line 249, ../../sass/_bswe.scss */
+/* line 251, ../../sass/_bswe.scss */
 body #headerwrap #main-nav a {
   color: #fff;
   min-height: 20px;
 }
 @media screen and (max-width: 480px) {
-  /* line 249, ../../sass/_bswe.scss */
+  /* line 251, ../../sass/_bswe.scss */
   body #headerwrap #main-nav a {
     color: #333;
   }
 }
 @media screen and (max-width: 520px) {
-  /* line 249, ../../sass/_bswe.scss */
+  /* line 251, ../../sass/_bswe.scss */
   body #headerwrap #main-nav a {
     font-size: 13px;
   }
 }
-/* line 264, ../../sass/_bswe.scss */
+/* line 266, ../../sass/_bswe.scss */
 body #headerwrap #main-nav .current_page_item a {
   color: #fff;
 }
-/* line 270, ../../sass/_bswe.scss */
+/* line 272, ../../sass/_bswe.scss */
 body #headerwrap #top-nav {
   float: right;
   padding: 0;
 }
-/* line 275, ../../sass/_bswe.scss */
+/* line 277, ../../sass/_bswe.scss */
 body #headerwrap #top-nav li:last-child {
   margin-right: 0;
 }
-/* line 279, ../../sass/_bswe.scss */
+/* line 281, ../../sass/_bswe.scss */
 body #headerwrap #top-nav li a {
   color: #9ccfee;
   font-weight: bold;
 }
 @media screen and (max-width: 760px) {
-  /* line 287, ../../sass/_bswe.scss */
+  /* line 289, ../../sass/_bswe.scss */
   body .hide-mobile {
     display: none;
   }
 }
-/* line 293, ../../sass/_bswe.scss */
+/* line 295, ../../sass/_bswe.scss */
 body .homepage-signup,
 body .sidebar_newsletter,
 body .article-bottom-signup {
@@ -296,13 +298,13 @@ body .article-bottom-signup {
   text-align: left;
   margin-bottom: 15px;
 }
-/* line 302, ../../sass/_bswe.scss */
+/* line 304, ../../sass/_bswe.scss */
 body .homepage-signup em,
 body .sidebar_newsletter em,
 body .article-bottom-signup em {
   color: #333;
 }
-/* line 306, ../../sass/_bswe.scss */
+/* line 308, ../../sass/_bswe.scss */
 body .homepage-signup h3,
 body .homepage-signup h4,
 body .sidebar_newsletter h3,
@@ -314,7 +316,7 @@ body .article-bottom-signup h4 {
   margin: 0 0 15px;
   background: none;
 }
-/* line 316, ../../sass/_bswe.scss */
+/* line 318, ../../sass/_bswe.scss */
 body .homepage-signup h3,
 body .sidebar_newsletter h3,
 body .article-bottom-signup h3 {
@@ -325,13 +327,13 @@ body .article-bottom-signup h3 {
   padding: 10px;
   line-height: 1.2em;
 }
-/* line 326, ../../sass/_bswe.scss */
+/* line 328, ../../sass/_bswe.scss */
 body .homepage-signup h3 em,
 body .sidebar_newsletter h3 em,
 body .article-bottom-signup h3 em {
   color: #fff;
 }
-/* line 331, ../../sass/_bswe.scss */
+/* line 333, ../../sass/_bswe.scss */
 body .homepage-signup h4,
 body .sidebar_newsletter h4,
 body .article-bottom-signup h4 {
@@ -339,7 +341,7 @@ body .article-bottom-signup h4 {
   padding: 5px;
   border: 1px solid #000;
 }
-/* line 337, ../../sass/_bswe.scss */
+/* line 339, ../../sass/_bswe.scss */
 body .homepage-signup input[type=text],
 body .sidebar_newsletter input[type=text],
 body .article-bottom-signup input[type=text] {
@@ -348,125 +350,125 @@ body .article-bottom-signup input[type=text] {
   padding: 5px;
   margin: 0 0 10px;
 }
-/* line 344, ../../sass/_bswe.scss */
+/* line 346, ../../sass/_bswe.scss */
 body .homepage-signup input[type=submit],
 body .sidebar_newsletter input[type=submit],
 body .article-bottom-signup input[type=submit] {
   color: #fff;
   background-color: #2b7534;
 }
-/* line 350, ../../sass/_bswe.scss */
+/* line 352, ../../sass/_bswe.scss */
 body .img-container {
   max-height: 120px;
   overflow: hidden;
   margin-bottom: 5px;
 }
 @media screen and (max-width: 480px) {
-  /* line 350, ../../sass/_bswe.scss */
+  /* line 352, ../../sass/_bswe.scss */
   body .img-container {
     text-align: center;
   }
 }
 @media screen and (max-width: 480px) {
-  /* line 360, ../../sass/_bswe.scss */
+  /* line 362, ../../sass/_bswe.scss */
   body .img-container figure.left {
     float: none;
   }
 }
-/* line 368, ../../sass/_bswe.scss */
+/* line 370, ../../sass/_bswe.scss */
 body .loops-wrapper.grid2 .post,
 body .loops-wrapper.grid3 .post,
 body .loops-wrapper.grid4 .post {
   clear: none;
 }
-/* line 373, ../../sass/_bswe.scss */
+/* line 375, ../../sass/_bswe.scss */
 body .loops-wrapper.grid2 .post .post-title,
 body .loops-wrapper.grid3 .post .post-title,
 body .loops-wrapper.grid4 .post .post-title {
   clear: both;
 }
-/* line 380, ../../sass/_bswe.scss */
+/* line 382, ../../sass/_bswe.scss */
 body #loops-wrapper .sidebar-boxunit,
 body article .sidebar-boxunit {
   margin-bottom: 10px;
 }
 @media screen and (min-width: 760px) {
-  /* line 380, ../../sass/_bswe.scss */
+  /* line 382, ../../sass/_bswe.scss */
   body #loops-wrapper .sidebar-boxunit,
   body article .sidebar-boxunit {
     display: none;
   }
 }
-/* line 389, ../../sass/_bswe.scss */
+/* line 391, ../../sass/_bswe.scss */
 body .mobile-boxunit-img {
   display: none;
   text-align: center;
   margin-bottom: 10px;
 }
 @media screen and (max-width: 480px) {
-  /* line 389, ../../sass/_bswe.scss */
+  /* line 391, ../../sass/_bswe.scss */
   body .mobile-boxunit-img {
     display: block;
   }
 }
-/* line 399, ../../sass/_bswe.scss */
+/* line 401, ../../sass/_bswe.scss */
 body #nav-bar {
   min-height: inherit;
   padding-top: 4px;
 }
 @media screen and (max-width: 600px) {
-  /* line 403, ../../sass/_bswe.scss */
+  /* line 405, ../../sass/_bswe.scss */
   body #nav-bar ul {
     display: none;
   }
 }
-/* line 409, ../../sass/_bswe.scss */
+/* line 411, ../../sass/_bswe.scss */
 body #nav-bar .jrsm-0 {
   margin-bottom: 10px;
   font-size: 16px;
 }
-/* line 415, ../../sass/_bswe.scss */
+/* line 417, ../../sass/_bswe.scss */
 body .post-author {
   color: #333;
   font-style: normal;
   font-weight: bold;
 }
-/* line 423, ../../sass/_bswe.scss */
+/* line 425, ../../sass/_bswe.scss */
 body .post {
   margin-bottom: 0;
 }
 @media screen and (max-width: 480px) {
-  /* line 426, ../../sass/_bswe.scss */
+  /* line 428, ../../sass/_bswe.scss */
   body .post .post-content {
     clear: both;
   }
 }
-/* line 431, ../../sass/_bswe.scss */
+/* line 433, ../../sass/_bswe.scss */
 body .post .post-content li {
   font-size: 16px;
 }
-/* line 437, ../../sass/_bswe.scss */
+/* line 439, ../../sass/_bswe.scss */
 body #sidebar,
 body #sidebar-alt {
   text-align: center;
 }
-/* line 446, ../../sass/_bswe.scss */
+/* line 448, ../../sass/_bswe.scss */
 body #sidebar .widget_recent_comments a,
 body #sidebar-alt .widget_recent_comments a {
   font-style: italic;
   text-decoration: underline;
 }
-/* line 450, ../../sass/_bswe.scss */
+/* line 452, ../../sass/_bswe.scss */
 body #sidebar .widget_recent_comments a:hover,
 body #sidebar-alt .widget_recent_comments a:hover {
   text-decoration: none;
 }
-/* line 455, ../../sass/_bswe.scss */
+/* line 457, ../../sass/_bswe.scss */
 body #sidebar .widget_recent_comments li,
 body #sidebar-alt .widget_recent_comments li {
   text-align: left;
 }
-/* line 461, ../../sass/_bswe.scss */
+/* line 463, ../../sass/_bswe.scss */
 body #sidebar h4.widgettitle,
 body #sidebar-alt h4.widgettitle {
   background: #000;
@@ -478,87 +480,87 @@ body #sidebar-alt h4.widgettitle {
   padding: 7px;
 }
 @media screen and (max-width: 760px) {
-  /* line 474, ../../sass/_bswe.scss */
+  /* line 476, ../../sass/_bswe.scss */
   body #sidebar .sidebar_newsletter,
   body #sidebar-alt .sidebar_newsletter {
     display: none;
   }
 }
-/* line 481, ../../sass/_bswe.scss */
+/* line 483, ../../sass/_bswe.scss */
 body .sidebar-boxunit {
   clear: both;
   text-align: center;
 }
-/* line 486, ../../sass/_bswe.scss */
+/* line 488, ../../sass/_bswe.scss */
 body .sidebar-boxunit img.desktop-tablet-boxunit-img, body .sidebar-boxunit img.mobile-boxunit-img {
   display: none;
 }
 @media screen and (min-width: 760px) {
-  /* line 491, ../../sass/_bswe.scss */
+  /* line 493, ../../sass/_bswe.scss */
   body .sidebar-boxunit img.desktop-tablet-boxunit-img {
     display: inline-block;
   }
 }
 @media screen and (max-width: 760px) {
-  /* line 497, ../../sass/_bswe.scss */
+  /* line 499, ../../sass/_bswe.scss */
   body .sidebar-boxunit img.mobile-boxunit-img {
     display: inline-block;
   }
 }
-/* line 505, ../../sass/_bswe.scss */
+/* line 507, ../../sass/_bswe.scss */
 body .social_icons {
   margin-bottom: 10px;
 }
-/* line 508, ../../sass/_bswe.scss */
+/* line 510, ../../sass/_bswe.scss */
 body .social_icons p {
   position: relative;
 }
-/* line 511, ../../sass/_bswe.scss */
+/* line 513, ../../sass/_bswe.scss */
 body .social_icons p span {
   font-size: 17px;
   position: absolute;
   left: 99px;
   top: 6px;
 }
-/* line 521, ../../sass/_bswe.scss */
+/* line 523, ../../sass/_bswe.scss */
 body .top-text-boxunit {
   padding-bottom: 7px;
 }
-/* line 524, ../../sass/_bswe.scss */
+/* line 526, ../../sass/_bswe.scss */
 body .top-text-boxunit a {
   color: #fff;
   font-style: italic;
   font-size: 14px;
 }
-/* line 603, ../../sass/_bswe.scss */
+/* line 605, ../../sass/_bswe.scss */
 body .writer_promo {
   background-color: #f2ee8b;
   padding: 10px;
   border: #000 1px solid;
 }
-/* line 608, ../../sass/_bswe.scss */
+/* line 610, ../../sass/_bswe.scss */
 body .writer_promo h2 {
   margin-top: 0;
   font-family: Cabin, Arial, sans-serif;
 }
-/* line 613, ../../sass/_bswe.scss */
+/* line 615, ../../sass/_bswe.scss */
 body .writer_promo h4 {
   margin: 0;
 }
-/* line 619, ../../sass/_bswe.scss */
+/* line 621, ../../sass/_bswe.scss */
 body .yarpp-related a {
   font-weight: normal;
 }
-/* line 623, ../../sass/_bswe.scss */
+/* line 625, ../../sass/_bswe.scss */
 body .yarpp-related legend {
   font-size: 18px;
   font-weight: bold;
 }
-/* line 631, ../../sass/_bswe.scss */
+/* line 633, ../../sass/_bswe.scss */
 body a.read-more {
   color: #347bd2;
 }
-/* line 634, ../../sass/_bswe.scss */
+/* line 636, ../../sass/_bswe.scss */
 body a.read-more:hover {
   color: #347bd2;
 }
