--- a/responz-new/dev/sass/_bswe.scss
+++ b/responz-new/dev/sass/_bswe.scss
@@ -74,7 +74,9 @@ body {
     color: $default-font-color;
     font-family: $main-font;
 
-    p {
+    p,
+    #content li,
+    .writer_promo {
         font-size: 16px;
         line-height: 1.5em;
     }
