--- a/responz-new/css/bswe.css
+++ b/responz-new/css/bswe.css
@@ -437,38 +437,65 @@ body .post-author {
 body .post {
   margin-bottom: 0;
 }
+/* line 429, ../../sass/_bswe.scss */
+body .post .post-content h2,
+body .post .post-content h3,
+body .post .post-content h4,
+body .post .post-content h5 {
+  font-weight: bold;
+}
+/* line 436, ../../sass/_bswe.scss */
+body .post .post-content h1 {
+  font-size: 2.6em;
+}
+/* line 440, ../../sass/_bswe.scss */
+body .post .post-content h2 {
+  font-size: 2.2em;
+}
+/* line 444, ../../sass/_bswe.scss */
+body .post .post-content h3 {
+  font-size: 1.9em;
+}
+/* line 448, ../../sass/_bswe.scss */
+body .post .post-content h4 {
+  font-size: 1.5em;
+}
+/* line 452, ../../sass/_bswe.scss */
+body .post .post-content h5 {
+  font-size: 1.1em;
+}
 @media screen and (max-width: 480px) {
   /* line 428, ../../sass/_bswe.scss */
   body .post .post-content {
     clear: both;
   }
 }
-/* line 433, ../../sass/_bswe.scss */
+/* line 460, ../../sass/_bswe.scss */
 body .post .post-content li {
   font-size: 16px;
 }
-/* line 439, ../../sass/_bswe.scss */
+/* line 466, ../../sass/_bswe.scss */
 body #sidebar,
 body #sidebar-alt {
   text-align: center;
 }
-/* line 448, ../../sass/_bswe.scss */
+/* line 475, ../../sass/_bswe.scss */
 body #sidebar .widget_recent_comments a,
 body #sidebar-alt .widget_recent_comments a {
   font-style: italic;
   text-decoration: underline;
 }
-/* line 452, ../../sass/_bswe.scss */
+/* line 479, ../../sass/_bswe.scss */
 body #sidebar .widget_recent_comments a:hover,
 body #sidebar-alt .widget_recent_comments a:hover {
   text-decoration: none;
 }
-/* line 457, ../../sass/_bswe.scss */
+/* line 484, ../../sass/_bswe.scss */
 body #sidebar .widget_recent_comments li,
 body #sidebar-alt .widget_recent_comments li {
   text-align: left;
 }
-/* line 463, ../../sass/_bswe.scss */
+/* line 490, ../../sass/_bswe.scss */
 body #sidebar h4.widgettitle,
 body #sidebar-alt h4.widgettitle {
   background: #000;
@@ -480,87 +507,87 @@ body #sidebar-alt h4.widgettitle {
   padding: 7px;
 }
 @media screen and (max-width: 760px) {
-  /* line 476, ../../sass/_bswe.scss */
+  /* line 503, ../../sass/_bswe.scss */
   body #sidebar .sidebar_newsletter,
   body #sidebar-alt .sidebar_newsletter {
     display: none;
   }
 }
-/* line 483, ../../sass/_bswe.scss */
+/* line 510, ../../sass/_bswe.scss */
 body .sidebar-boxunit {
   clear: both;
   text-align: center;
 }
-/* line 488, ../../sass/_bswe.scss */
+/* line 515, ../../sass/_bswe.scss */
 body .sidebar-boxunit img.desktop-tablet-boxunit-img, body .sidebar-boxunit img.mobile-boxunit-img {
   display: none;
 }
 @media screen and (min-width: 760px) {
-  /* line 493, ../../sass/_bswe.scss */
+  /* line 520, ../../sass/_bswe.scss */
   body .sidebar-boxunit img.desktop-tablet-boxunit-img {
     display: inline-block;
   }
 }
 @media screen and (max-width: 760px) {
-  /* line 499, ../../sass/_bswe.scss */
+  /* line 526, ../../sass/_bswe.scss */
   body .sidebar-boxunit img.mobile-boxunit-img {
     display: inline-block;
   }
 }
-/* line 507, ../../sass/_bswe.scss */
+/* line 534, ../../sass/_bswe.scss */
 body .social_icons {
   margin-bottom: 10px;
 }
-/* line 510, ../../sass/_bswe.scss */
+/* line 537, ../../sass/_bswe.scss */
 body .social_icons p {
   position: relative;
 }
-/* line 513, ../../sass/_bswe.scss */
+/* line 540, ../../sass/_bswe.scss */
 body .social_icons p span {
   font-size: 17px;
   position: absolute;
   left: 99px;
   top: 6px;
 }
-/* line 523, ../../sass/_bswe.scss */
+/* line 550, ../../sass/_bswe.scss */
 body .top-text-boxunit {
   padding-bottom: 7px;
 }
-/* line 526, ../../sass/_bswe.scss */
+/* line 553, ../../sass/_bswe.scss */
 body .top-text-boxunit a {
   color: #fff;
   font-style: italic;
   font-size: 14px;
 }
-/* line 605, ../../sass/_bswe.scss */
+/* line 632, ../../sass/_bswe.scss */
 body .writer_promo {
   background-color: #f2ee8b;
   padding: 10px;
   border: #000 1px solid;
 }
-/* line 610, ../../sass/_bswe.scss */
+/* line 637, ../../sass/_bswe.scss */
 body .writer_promo h2 {
   margin-top: 0;
   font-family: Cabin, Arial, sans-serif;
 }
-/* line 615, ../../sass/_bswe.scss */
+/* line 642, ../../sass/_bswe.scss */
 body .writer_promo h4 {
   margin: 0;
 }
-/* line 621, ../../sass/_bswe.scss */
+/* line 648, ../../sass/_bswe.scss */
 body .yarpp-related a {
   font-weight: normal;
 }
-/* line 625, ../../sass/_bswe.scss */
+/* line 652, ../../sass/_bswe.scss */
 body .yarpp-related legend {
   font-size: 18px;
   font-weight: bold;
 }
-/* line 633, ../../sass/_bswe.scss */
+/* line 660, ../../sass/_bswe.scss */
 body a.read-more {
   color: #347bd2;
 }
-/* line 636, ../../sass/_bswe.scss */
+/* line 663, ../../sass/_bswe.scss */
 body a.read-more:hover {
   color: #347bd2;
 }
