--- a/responz-new/dev/sass/_bswe.scss
+++ b/responz-new/dev/sass/_bswe.scss
@@ -426,6 +426,33 @@ body {
         margin-bottom: 0;
 
         .post-content {
+            h2,
+            h3,
+            h4,
+            h5 {
+                font-weight: bold;
+            }
+
+            h1 {
+                font-size: 2.6em;
+            }
+
+            h2 {
+                font-size: 2.2em;
+            }
+
+            h3 {
+                font-size: 1.9em;
+            }
+
+            h4 {
+                font-size: 1.5em;
+            }
+
+            h5 {
+                font-size: 1.1em;
+            }
+
             @media screen and (max-width: $smallest) {
                 clear: both;
             }
